# traffic-classifier

./: .dockerignore  .gitignore  CHANGELOG.md  DOCKER.md  LICENSE  Makefile  README.md  config.toml  docker-compose.yml  docker-config.toml
backend/: Cargo.toml  Dockerfile
backend/src/: benchmark.rs  config.rs  main.rs  ml_client.rs
capture/: Cargo.toml
capture/src/: capture.rs  lib.rs  main.rs  sim.rs
classifier/: Dockerfile  Dockerfile.mlx  TrafficClassifier.onnx  convert_to_mlx.py  ml_server.py  mlx_server.py  parse_capture.py  parse_tcpdump.py  real_traffic_data.npz  requirements.txt  retrain_real.py  traffic_classifier.npz  traffic_classifier_real.npz  train.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
traffic-gen/: main.go
