[package]
name = "capture"
version = "0.1.0"
edition = "2021"

[features]
default = []
pcap = []

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pcap = "1"

[[bin]]
name = "capture-demo"
path = "src/main.rs"